@@ -32,3 +32,6 @@ Wim Bonis <bonis@solution-service.de>
 Arvid Requate <arvid@Team.OWL-Online.DE>
 Mikolaj J. Habryn <dichro@rcpt.to>
 Ronny Cook <ronny@asiaonline.net>
+Geoff Mitchell <g.mitchell@videonetworks.com>
+Willi Langenberger <wlang@wu-wien.ac.at>
+
