@@ -17,6 +17,9 @@ xxx
   - Fixed (minor) casting problems with using various popt calls
   - Correct handling of litereals quoted with \" characters in
     IMAP mode.
+  - Removed mutiple calls to dlerror() for a single error
+  - Fixed error in options parsing so that -S|--strip_domain
+    can be called without an argument.
 
 5th April 2001
 (Horms)
